# ir-rag-evaluation-lab

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json
backend/: pyproject.toml
backend/src/ir_rag_eval/: analytics.py  cli.py  config.py  reporting.py  text_mining.py
backend/src/ir_rag_eval/api/: deps.py  main.py  routes_analytics.py  routes_bad_cases.py  routes_corpus.py  routes_evaluate.py  routes_evaluation_suites.py  routes_experiments.py  routes_health.py  routes_jobs.py  routes_llm.py  routes_rag.py  routes_search.py  routes_text_mining.py  schemas.py
backend/src/ir_rag_eval/corpus/: dataset_loaders.py  dataset_registry.py  loader.py  sample_generator.py  validator.py
backend/src/ir_rag_eval/db/: connection.py  migrations.py  schema.sql
backend/src/ir_rag_eval/evaluation/: bad_case_generator.py  bad_cases.py  citation_checker.py  evaluator.py  metrics.py  rag_metrics.py
backend/src/ir_rag_eval/experiments/: comparison.py  persistence.py  registry.py  run_persistence.py  runner.py  suites.py
backend/src/ir_rag_eval/indexing/: bm25_index.py  dense_index.py  hybrid_index.py
backend/tests/: test_analytics.py  test_analytics_decision_tools.py  test_api_health.py  test_bad_cases.py  test_bm25.py  test_citation_checker.py  test_corpus_loader.py  test_corpus_upload.py  test_dataset_loaders.py  test_dataset_registry.py  test_dense_retriever.py  test_evaluation_suites.py  test_jobs.py  test_llm_adapter.py  test_metrics.py  test_rag_claims.py  test_search_persistence.py  test_text_mining.py
data/: README.md
docs/: data_card.md  (+8 more)
(+141 files in other folders)
