[project]
name = "ir-rag-evaluation-lab-backend"
version = "0.1.0"
description = "FastAPI backend for IR / RAG Evaluation Lab"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.111.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rank-bm25>=0.2.2",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dense = ["sentence-transformers>=3.0.0"]
textmining = ["scikit-learn>=1.5.0", "networkx>=3.3", "mlxtend>=0.23.0", "pandas>=2.2.0", "numpy>=1.26.0"]
dev = ["httpx>=0.27.0", "pytest>=8.2.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
